@@ -12,6 +12,9 @@ https://savannah.nongnu.org/bugs/?25090
 bug #24889: NCFTP cannot deal with some FTP servers
 https://savannah.nongnu.org/bugs/?24889
 
+patch #6692: Print collection status in a machine-readable way
+https://savannah.nongnu.org/patch/?6692
+
 
 New in v0.5.03 (2008/11/17)
 ---------------------------
